--- a/loginm/css/estilosL.css
+++ b/loginm/css/estilosL.css
@@ -1,6 +1,5 @@
     * {
         box-sizing: border-box;
-        flex-wrap: wrap;
         position: relative;
     }
     
@@ -170,8 +169,8 @@
     /* Conten */
     
     .contenedorR {
-        width: 800px;
-        height: 450px;
+        width: auto;
+        height: auto;
         text-align: justify;
         margin: 50px auto;
         overflow-y: auto;
