--- a/estilos.css
+++ b/estilos.css
@@ -102,7 +102,7 @@
                     .nav1 {
                         background: transparent;
                         height: 80px;
-                        color: rgb(252, 252, 252);
+                        color: rgb(0, 0, 0);
                         font-size: 68px;
                         font-family: Helvetica, Futura, Arial, Verdana, sans-serif;
                     }
@@ -143,6 +143,7 @@
                     .logo,
                     .logo img {
                         height: 80px;
+                        margin-top: 1px ;
                     }
                     
                     .icono {
